Closed Bug 229147 Opened 22 years ago Closed 22 years ago

mHost = ArenaStrDup from nsHostEntry can fail and needs to be handled

Categories

(Core :: Networking: Cookies, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

Attached patch handle failureSplinter Review
Attachment #137827 - Flags: review?(dwitte)
Comment on attachment 137827 [details] [diff] [review] handle failure looks fine to me, but this is mvl-land :)
Attachment #137827 - Flags: review?(dwitte) → review?(mvl)
Comment on attachment 137827 [details] [diff] [review] handle failure r=me, but next time please take a few more words, and/or a lxr link to actually describe the problem.
Attachment #137827 - Flags: review?(mvl) → review+
Attachment #137827 - Flags: superreview?(bz-vacation)
Comment on attachment 137827 [details] [diff] [review] handle failure Looks fine. sr=bzbarsky
Attachment #137827 - Flags: superreview?(bz-vacation) → superreview+
1.38 timeless%mozdev.org Feb 4 08:15 Bug 229147 mHost = ArenaStrDup from nsHostEntry can fail and needs to be handled r=mvl sr=bz
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: