Bug 229147 mHost = ArenaStrDup from nsHostEntry can fail and needs to be handled r=mvl sr=bz